# leptos-datatable

./: Cargo.toml  LICENSE  README.md
example/: Cargo.toml  index.html  styles.css
example/src/: main.rs
src/: data.rs  lib.rs  table.rs
